--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
 button {
   width: 100px;
   height: 110px;
+  margin: 0;
   font-size: 30px;
   font-family: 'OCRB';
   text-shadow: 2px 1px 7px black;
@@ -41,6 +42,10 @@ button:hover {
 .sum {
   width: 200px;
   background-color:#403357;
+}
+
+.boardRow {
+  margin: 0;
 }
 
 #sum_inp {
